RESOLVED FIXED256956
Fix animation of stop-color on <stop>
https://bugs.webkit.org/show_bug.cgi?id=256956
Summary Fix animation of stop-color on <stop>
Ahmad Saleem
Reported 2023-05-18 02:35:06 PDT
Hi Team, While going through Blink's commit, I came across another failing WPT test case: Blink Commit: https://chromium.googlesource.com/chromium/src.git/+/176379b6e15a3a0ae8b65bb493691ffd00ed3767 WPT link: https://wpt.fyi/results/svg/animations/animate-stop-currentcolor.html?label=master&label=experimental&aligned&q=animate-stop-currentcolor.html WPT Test link: http://wpt.live/svg/animations/animate-stop-currentcolor.html It might be duplicate of bug 95083 (especially [2] bullet point). Just wanted to raise so we can track but if it is duplicate, we can mark this as well. Why I am not doing it straight away because the test case in other bug is working same as Chrome Canary 115 and Safari 16.4.1. Thanks!
Attachments
Radar WebKit Bug Importer
Comment 1 2023-05-25 02:36:16 PDT
Ahmad Saleem
Comment 2 2023-07-05 09:10:25 PDT
Similar looking function (SVGStopElement::stopColorIncludingOpacity()): https://searchfox.org/wubkat/source/Source/WebCore/svg/SVGStopElement.cpp#87 if (!renderer()) return Color::transparentBlack; auto& style = renderer()->style(); auto& svgStyle = style.svgStyle(); auto stopColor = style.colorResolvingCurrentColor(svgStyle.stopColor()); return stopColor.colorWithAlphaMultipliedBy(svgStyle.stopOpacity());
Rob Buis
Comment 3 2023-10-16 05:53:04 PDT
EWS
Comment 4 2025-10-26 01:15:23 PDT
Committed 302163@main (3dd3c8cdda3e): <https://commits.webkit.org/302163@main> Reviewed commits have been landed. Closing PR #19112 and removing active labels.
Ahmad Saleem
Comment 5 2025-11-13 18:02:15 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/56026
Note You need to log in before you can comment on or make changes to this bug.