Fix animation of stop-color on <stop> https://bugs.webkit.org/show_bug.cgi?id=256956

Reviewed by Nikolas Zimmermann.

Accept case-insensitive 'currentcolor' on color animations.

* LayoutTests/imported/w3c/web-platform-tests/svg/animations/animate-stop-currentcolor-expected.txt:
* Source/WebCore/css/parser/CSSParser.cpp:
(WebCore::CSSParser::parseColorOrCurrentColorWithoutContext):
* Source/WebCore/css/parser/CSSParser.h:
* Source/WebCore/svg/properties/SVGAnimationAdditiveValueFunctionImpl.cpp:
(WebCore::SVGAnimationColorFunction::colorFromString):
* Source/WebCore/svg/properties/SVGPropertyTraits.h:
(WebCore::SVGPropertyTraits<Color>::parse):