Source/WebCore/css/parser/CSSParser.cpp
@@ -1804,4 +1804,19 @@ void CSSParser::consumeDeclarationValue(CSSParserTokenRange range, CSSPropertyID
     CSSPropertyParser::parseValue(propertyID, important, range, m_context, topContext().m_parsedProperties, ruleType);
 }
 
+std::optional<Style::Color> CSSParser::parseColorOrCurrentColorWithoutContext(const String& string)
+{
+    if (auto color = CSSParserFastPaths::parseSimpleColor(string, CSSParserContext(HTMLStandardMode)))
+        return *color;
+    // FIXME: Unclear why we want to ignore the boolean argument "strict" and always pass strictCSSParserContext here.
+    auto value = CSSPropertyParser::parseStylePropertyLonghand(CSSPropertyColor, string, strictCSSParserContext());
+    if (!value)
+        return std::nullopt;
+    if (value->isColor())
+        return CSSColorValue::absoluteColor(*value);
+    if (value->valueID() == CSSValueCurrentcolor)
+        return Style::Color();
+    return std::nullopt;
+}
+
 } // namespace WebCore
